--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
         </a>
         <ul id="forms-nav" class="nav-content collapse show" data-bs-parent="#sidebar-nav">
           <li>
-            <a href="forms-validation.html" class="active">
+            <a href="forms-validation.html">
               <i class="bi bi-circle"></i><span>Cadastro</span>
             </a>
           </li>
