PWA+API+Hardware (atividade 2)

--- a/faq.html
+++ b/faq.html
@@ -210,7 +210,7 @@
         </a>
         <ul id="forms-nav" class="nav-content collapse show" data-bs-parent="#sidebar-nav">
           <li>
-            <a href="produtos-cadastro.html" class="active">
+            <a href="produtos-cadastro.html">
               <i class="bi bi-circle"></i><span>Cadastro</span>
             </a>
           </li>
@@ -223,6 +223,13 @@
       </li><!-- End Produtos Nav -->
 
       <li class="nav-heading">Pages</li>
+
+      <li class="nav-item">
+        <a class="nav-link collapsed" href="busca.html">
+          <i class="bi bi-geo-alt"></i>
+          <span>Busca</span>
+        </a>
+      </li><!-- End Busca Page Nav -->
 
       <li class="nav-item">
         <a class="nav-link collapsed" href="perfil.html">
@@ -257,7 +264,7 @@
 
     <section class="section faq">
       <div class="row">
-        <div class="col-lg-6">
+        <div class="col-12">
 
           <div class="card basic">
             <div class="card-body">
@@ -355,19 +362,7 @@
 
   </main><!-- End #main -->
 
-  <!-- ======= Footer ======= -->
-  <footer id="footer" class="footer">
-    <div class="copyright">
-      &copy; Copyright <strong><span>NiceAdmin</span></strong>. All Rights Reserved
-    </div>
-    <div class="credits">
-      <!-- All the links in the footer should remain intact. -->
-      <!-- You can delete the links only if you purchased the pro version. -->
-      <!-- Licensing information: https://bootstrapmade.com/license/ -->
-      <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/nice-admin-bootstrap-admin-html-template/ -->
-      Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-    </div>
-  </footer><!-- End Footer -->
+  
 
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
