--- a/index.html
+++ b/index.html
@@ -220,6 +220,13 @@
       <li class="nav-heading">Pages</li>
 
       <li class="nav-item">
+        <a class="nav-link collapsed" href="busca.html">
+          <i class="bi bi-geo-alt"></i>
+          <span>Busca</span>
+        </a>
+      </li><!-- End Busca Page Nav -->
+
+      <li class="nav-item">
         <a class="nav-link collapsed" href="perfil.html">
           <i class="bi bi-person"></i>
           <span>Perfil</span>
@@ -253,11 +260,11 @@
       <div class="row">
 
         <!-- Left side columns -->
-        <div class="col-lg-8">
+        <div class="col-12">
           <div class="row">
 
             <!-- Produtos Cadastrados Card -->
-            <div class="col-xxl-4 col-md-6">
+            <div class="col-xxl-4 col-12">
               <div class="card info-card sales-card">
 
                 <div class="filter">
@@ -291,7 +298,7 @@
             </div><!-- End Produtos Cadastrados Card -->
 
             <!-- Feiras realizadas Card -->
-            <div class="col-xxl-4 col-md-6">
+            <div class="col-12">
               <div class="card info-card revenue-card">
 
                 <div class="filter">
@@ -507,26 +514,13 @@
 
   </main><!-- End #main -->
 
-  <!-- ======= Footer ======= -->
-  <footer id="footer" class="footer">
-    <div class="copyright">
-      &copy; Copyright <strong><span>NiceAdmin</span></strong>. All Rights Reserved
-    </div>
-    <div class="credits">
-      <!-- All the links in the footer should remain intact. -->
-      <!-- You can delete the links only if you purchased the pro version. -->
-      <!-- Licensing information: https://bootstrapmade.com/license/ -->
-      <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/nice-admin-bootstrap-admin-html-template/ -->
-      Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-    </div>
-  </footer><!-- End Footer -->
+  
 
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
-  
+  <script src="assets/vendor/apexcharts/apexcharts.min.js"></script>
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
- 
   <script src="assets/vendor/echarts/echarts.min.js"></script>
   <script src="assets/vendor/quill/quill.min.js"></script>
   <script src="assets/vendor/simple-datatables/simple-datatables.js"></script>
