--- a/produtos-despensa.html
+++ b/produtos-despensa.html
@@ -225,6 +225,13 @@
       <li class="nav-heading">Pages</li>
 
       <li class="nav-item">
+        <a class="nav-link collapsed" href="busca.html">
+          <i class="bi bi-geo-alt"></i>
+          <span>Busca</span>
+        </a>
+      </li><!-- End Busca Page Nav -->
+
+      <li class="nav-item">
         <a class="nav-link collapsed" href="perfil.html">
           <i class="bi bi-person"></i>
           <span>Perfil</span>
@@ -254,7 +261,7 @@
         </ol>
       </nav>
     </div><!-- End Page Title -->
-    <div class="col-lg-6">
+    <div class="col-12">
       <div>
         <div class="form-check form-switch">
           <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault" checked>
@@ -271,7 +278,7 @@
 
     <section class="section">
       <div class="row">
-        <div class="col-lg-6">
+        <div class="col-12">
 
           <button type="button" class="btn btn-success mb-2">
             Estoque cheio <span class="badge bg-white text-success">3</span>
@@ -345,19 +352,7 @@
 
   </main><!-- End #main -->
 
-  <!-- ======= Footer ======= -->
-  <footer id="footer" class="footer">
-    <div class="copyright">
-      &copy; Copyright <strong><span>NiceAdmin</span></strong>. All Rights Reserved
-    </div>
-    <div class="credits">
-      <!-- All the links in the footer should remain intact. -->
-      <!-- You can delete the links only if you purchased the pro version. -->
-      <!-- Licensing information: https://bootstrapmade.com/license/ -->
-      <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/nice-admin-bootstrap-admin-html-template/ -->
-      Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-    </div>
-  </footer><!-- End Footer -->
+  
 
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
